; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_set_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_set_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.waitq_set = type { i32 }

@waitq_set_zone = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Can't allocate a new waitq set from zone %p\00", align 1
@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.waitq_set* @waitq_set_alloc(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.waitq_set*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @waitq_set_zone, align 4
  %8 = call i64 @zalloc(i32 %7)
  %9 = inttoptr i64 %8 to %struct.waitq_set*
  store %struct.waitq_set* %9, %struct.waitq_set** %5, align 8
  %10 = load %struct.waitq_set*, %struct.waitq_set** %5, align 8
  %11 = icmp ne %struct.waitq_set* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @waitq_set_zone, align 4
  %14 = call i32 @panic(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %12, %2
  %16 = load %struct.waitq_set*, %struct.waitq_set** %5, align 8
  %17 = load i32, i32* %3, align 4
  %18 = load i8*, i8** %4, align 8
  %19 = call i64 @waitq_set_init(%struct.waitq_set* %16, i32 %17, i32* null, i8* %18)
  store i64 %19, i64* %6, align 8
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* @KERN_SUCCESS, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %15
  %24 = load i32, i32* @waitq_set_zone, align 4
  %25 = load %struct.waitq_set*, %struct.waitq_set** %5, align 8
  %26 = call i32 @zfree(i32 %24, %struct.waitq_set* %25)
  store %struct.waitq_set* null, %struct.waitq_set** %5, align 8
  br label %27

27:                                               ; preds = %23, %15
  %28 = load %struct.waitq_set*, %struct.waitq_set** %5, align 8
  ret %struct.waitq_set* %28
}

declare dso_local i64 @zalloc(i32) #1

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i64 @waitq_set_init(%struct.waitq_set*, i32, i32*, i8*) #1

declare dso_local i32 @zfree(i32, %struct.waitq_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
